...
    <string name="empty_message_error">Message can\'t be empty</string>
    <string name="connection_problems">Poor connectivity. Verify cell reception</string>

    <string name="masked_credit_card_number">**** **** **** %1$s</string>
    <string name="ride_active">You have an active ride.</string>

    <string name="no_mins">-- min</string>
    <string name="zero_mins">&lt;1 min</string>
    <string name="one_min">1 min</string>
    <string name="many_mins">%d mins</string>
    <plurals name="minutes_plural">
        <item quantity="one">@string/one_min</item>
        <item quantity="other">@string/many_mins</item>
    </plurals>
...
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>

    <string name="terms_invalid">Can\'t load Terms and Conditions. Please contact support</string>
    <string name="terms_load_error">Failed loading Terms and Conditions. Please retry</string>
    <string name="google_map">Google Map</string>
    <string name="car_marker">Car Marker</string>
    <string name="pickup_marker">Pickup Marker</string>
    <string name="destination_marker">Destination Marker</string>
    <string name="prev_ride_marker">Prev Ride Marker</string>
    <string name="next_ride_marker">Next Ride Marker</string>
    <string name="eta_marker">Eta Marker:</string>
...
    <string name="permission_phone">Phone</string>
    <string name="permission_sms">SMS</string>
    <string name="permission_contacts">Contacts</string>
    <string name="dont_have_permission">Ride requires your location to accurately pinpoint the location of your car. Please go to setting and enable location for %1$s</string>
    
    <!-- cancellation feedback -->
    <string name="cancel_feedback_rider_ok">Submit</string>
    <string name="cancel_feedback_rider_cancel">Cancel</string>
    <string name="cancel_feedback_driver_ok">Cancel Ride</string>
    <string name="cancel_feedback_driver_cancel">Don\'t Cancel Ride</string>
    <string name="cancel_feedback_message_hint">Enter your reason</string>
    <string name="cancel_feedback_rider_title">Your ride was cancelled.</string>
    <string name="cancel_feedback_rider_description">Tell us why and help us improve.</string>
    <string name="cancel_feedback_driver_title">Cancel this ride?</string>
    <string name="cancel_feedback_driver_description">The rider can be charged.</string>
    <string name="cancel_feedback_no_reason">Please select a reason</string>


</resources>
