...

    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="placeholder_rate">5</string>
    <string name="hint_leave_comment">Comments are anonymously shared with drivers</string>
    <string name="ride_summary_description">Thank you for the ride!</string>
    <string name="rate_unable_to_load_map">Unable to load ride map</string>
    <string name="btn_submit">Submit</string>
    <string name="text_cancel_ride_dialog">Do you really want to cancel this ride?</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_call">CALL</string>
    <string name="mock">Mock</string>
    <string name="location_error">Can not get location. Please check settings and enable location.</string>
    <string name="unable_resolve_address">Unable to resolve this location,  please try again</string>
...
    <string name="title_no_driver_available">No Driver Available</string>
    <string name="message_no_driver_available">We are sorry currently no driver is available at your location.</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_driver_with_fee">Your ride is cancelled by the driver. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_admin_with_fee">Your ride is cancelled by admin. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="message_ride_cancelled_by_user_with_fee">Your ride has been successfully cancelled. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_active_ride_cancel">The driver has started the trip. You cannot cancel after the trip has started.</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_html">text/html</string>
...
    <string name="your_last_trip">Your Last Trip</string>
    <string name="tip_no">No Tip</string>
    <string name="tip_one">$ 1</string>
    <string name="tip_two">$ 2</string>
    <string name="tip_five">$ 5</string>
    <string name="tip_ten">$ 10</string>
    <string name="tip_other">Other</string>
    <string name="usd_sign">$</string>
    <string name="tip_other_title">Enter other amount</string>
    <string name="pass_spaces">Password cannot contain spaces</string>
    <string name="phone_number_10_digits">Phone number should have at least 10 digits</string>
    <string name="price_placeholder">0</string>
    <string name="promo_codes">Promo Codes</string>
...
