<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ImageDialogBinding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_20_opaq">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            app:cardUseCompatPadding="false"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/black_80_opaq">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/dialogImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnClose"
            style="@style/Button.ImagePopupCloseButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp" />

    </RelativeLayout>

</layout>